--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Product Page</title>
+    <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
 <body>
 
-    <h1>Awesome Gadget</h1>
-    <p>Price: <span class="price">$150.00</span></p>
-    <button>Add to Cart</button>
+    <div class="card-main">
+        <h1>Totally Awesome Gadget</h1>
+        <p>Price: <span class="price">$150.00</span></p>
+        <button>Add to Cart</button>
 
-    <hr>
+        <hr>
 
-    <input id="discount" type="number" placeholder="Enter discount %" />
-    <button id="apply-discount">Apply Discount</button>
+        <input id="discount" type="number" placeholder="Enter discount %" />
+        <button id="apply-discount">Apply Discount</button>
+    </div>
 
 </body>
 </html>
