--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <button>Add to Cart</button>
 
         <hr>
+        <label for="qty">Quantity:</label>
+        <input type="number" id="qty" value="1" min="1" />
+        <p id="total"></p>
+        <hr>
 
         <input id="discount" type="number" placeholder="Enter discount %" />
         <button id="apply-discount">Apply Discount</button>
