--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="card-main">
         <h1>Totally Awesome Gadget</h1>
         <p>Price: <span class="price">$150.00</span></p>
-        <button>Add to Cart</button>
+        <button id="add-to-cart-btn">Add to Cart</button>
 
         <hr>
         <label for="qty">Quantity:</label>
